other/check-ingress-nginx-controller-version-and-annotation-policy/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-ingress-nginx-controller-version-and-annotation-policy
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../check-ingress-nginx-controller-version-and-annotation-policy.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: check-ingress-nginx-controller-version-and-annotation-policy
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: good-resource.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
